# zero-engine

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  IDEAS.md  README.md  TODO.md  clean.sh  configure.sh  format.sh
docs/: CODEBASE_STRUCTURE.md  CONTRIBUTING.md
editor/: README.md
engine/: CMakeLists.txt  logging.h  ze_engine.c  ze_engine.cpp  ze_engine.h  ze_types.h
engine/cont/: darray.c  darray.h
engine/render/: README.md  renderer.c  renderer.cpp  renderer.h
engine/render/vulkan/: vk_device.c  vk_device.h  vk_renderer.c  vk_renderer.cpp  vk_renderer.h  vk_types.h
testgame/: CMakeLists.txt  main.c  main.cpp
